components no longer filter all assets by active assets, reducer provides selector function for returning active assets now fetching assets and logging data from App strip all fetching and filtering logic out of AssetList, it now only displays props.assetList add usePrevious hook for tracking previous prop value use new hook to add update state to Asset row, now turns green when updated and show price diff, -red for neg +green for pos remove addAssetVisible state from App, AddAssetSelect now lives inside AddAssetButton and is toggle in/out of view from there added Last Updated text to ui

--- a/src/App.css
+++ b/src/App.css
@@ -17,3 +17,8 @@
 .asset-graph-container {
 	width: 100%;
 }
+
+.last-request {
+	position: absolute;
+	top: 10px;
+}
