--- a/src/styles/Assets.css
+++ b/src/styles/Assets.css
@@ -11,6 +11,12 @@
 	height: 40px;
 	margin-top: 16px;
 	font-weight: 400;
+	border-radius: 12px;
+}
+
+.asset-container.updated {
+	color: blue;
+	box-shadow: 0px 0px 1px 1px springgreen;
 }
 
 .asset-image-name-container {
@@ -43,6 +49,8 @@
 }
 
 .add-asset-select {
+	max-width: 200px;
+	padding: 0 10px;
 	border-radius: 12px;
 	border: 1px solid #aeb1c2;
 	background: white;
@@ -62,4 +70,28 @@
 
 .add-asset-select-button::before {
 	content: url('../icons/plusIcon.svg');
+}
+
+.loading-text {
+	padding: 50px 0;
+	text-align: center;
+}
+
+.difference-value {
+	margin-right: 10px;
+}
+
+.difference-value.minus {
+	color: tomato;
+}
+.difference-value.minus::before {
+	content: '-';
+}
+
+.difference-value.plus {
+	color: springgreen;
+}
+
+.difference-value.plus::before {
+	content: '+';
 }
